# csaps-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml  release.yml
src/: arrayfuncs.rs  errors.rs  lib.rs  ndarrayext.rs  ndg.rs  sprsext.rs  sspumv.rs  sspumv_impl.rs  sspumv_validate.rs  traits.rs  umv.rs  util.rs  validate.rs  validatedata.rs
src/ndg/: evaluate.rs  make.rs  util.rs  validate.rs
src/sspumv/: evaluate_impl.rs  evaluate_spline.rs  make_spline.rs  validate_data.rs
src/umv/: evaluate.rs  make.rs  validate.rs
tests/: lib.rs  ndg_evaluate.rs  ndg_make.rs  sspumv.rs  sspumv_evaluate.rs  sspumv_full.rs  sspumv_make.rs  sspumv_validate.rs  test_sspumv.rs  umv_evaluate.rs  umv_full.rs  umv_make.rs  umv_validate.rs
