[package]
name = "csaps"
version = "0.4.0"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]

description = "Cubic spline approximation (smoothing)"
keywords = ["spline", "interpolation", "approximation", "csaps", "smoothing"]
categories = ["science"]

homepage = "https://github.com/espdev/csaps-rs"
repository = "https://github.com/espdev/csaps-rs"
documentation = "https://docs.rs/csaps"
readme = "README.md"
license = "MIT"

edition = "2021"


[badges]
travis-ci = { repository = "espdev/csaps-rs", branch = "master" }
coveralls = { repository = "espdev/csaps-rs", branch = "master", service = "github" }


[dependencies]
num-traits = "0.2.14"
ndarray = "0.16.1"
sprs-ldl = "0.10.0"
sprs = "0.11.2"
almost = "0.2.0"
itertools = "0.13.0"
thiserror = "1.0.30" 

[dev-dependencies]
approx = "0.5.1"
ndarray = {version = "0.16.1", features = ["approx"]}
